Bug 335030 - Umbrello converts imported rose model file to xmi on default
Summary: Umbrello converts imported rose model file to xmi on default
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.13.1
Platform: unspecified All
: NOR normal
Target Milestone: ---
Assignee: Ralf Habacker
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-05-19 10:34 UTC by Ralf Habacker
Modified: 2014-05-22 19:13 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.13.2
Sentry Crash Report:


Attachments
testcase (78.88 KB, application/octet-stream)
2014-05-19 10:54 UTC, Ralf Habacker
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2014-05-19 10:34:10 UTC
(Auto)saving the current file after importing a rational rose file overwrites the original file content. 


Reproducible: Always

Steps to Reproduce:
1. open umbrello 
2. import appended rational rose file
3. save file
Actual Results:  
The imported rational rose contains xmi content; the original content has been overwritten.


Expected Results:  
The original file content should not be overwritten. Instead on saving there should be an xmi filename requested.
Comment 1 Ralf Habacker 2014-05-19 10:45:27 UTC
Git commit 01a37077ee6ef02e24ee98e32f7d82ec4fd24ca6 by Ralf Habacker.
Committed on 19/05/2014 at 10:41.
Pushed by habacker into branch 'KDE/4.13'.

Fix bug overwriting imported rational rose file.
FIXED-IN:4.13.2

M  +1    -0    umbrello/umldoc.cpp

http://commits.kde.org/umbrello/01a37077ee6ef02e24ee98e32f7d82ec4fd24ca6
Comment 2 Ralf Habacker 2014-05-19 10:54:40 UTC
Created attachment 86707 [details]
testcase