Fix bug overwriting imported rational rose file.

BUG:335030
FIXED-IN:4.13.2